2001-12-20  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/egg.cc (Egg_object): Fixed excessive monster spawning from
	testing wrong variable in is_active().

2001-12-19  Patrick Burke <takhisisii@yahoo.com.au>
	* usecode/ucxt/*: Added fixes for cygwin compatibility.
	* conf/Configuration.h: Added a 'return' in the call to read_config_file
	that I missed.

2001-12-18  Patrick Burke <takhisisii@yahoo.com.au>
	* usecode/ucxt/*: Added 'long' type handling for opcodes.txt.
	Optomised USECODE file reading to increase speed.

2001-12-17  Patrick Burke <takhisisii@yahoo.com.au>
	* conf/Configuration.[cc|h]: Updated from FILE *'s to fstreams.
	* usecode/ucxt/*: Updated to use U7open() rather then fstream.open().

2001-12-16  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc: Fiddling with combat formulae.  Combat skill counts
	for more, and 'level' is no longer used at all.

2001-12-16  Patrick Burke  <takhisisii@yahoo.com.au>
	* tools/Makefile.am, cmanip.cc: A simple command-line conf/ file
	editor. Added under no-install.

2001-12-15  Patrick Burke  <takhisisii@yahoo.com.au>
	* usecode/ucxt/opcodes.txt: Updated opcodes callis and calli to output
	intrinsic names
	* usecode/ucxt/: Code cleanup and commenting.

2001-12-14  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/intrinsics.cc: Fixed set_item_quantity() so it returns
	correct value, and doesn't delete items not in world.

2001-12-14  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* shapes/vgafile.cc: fixed broken debugging output

2001-12-14  Tristan Tarrant <nadir@users.sourceforge.net>
	* bggame.cc, sigame.cc: new game displays correctly in spanish

2001-12-14  Tristan Tarrant <nadir@users.sourceforge.net>
	* data/audiooptions.shp: made 10 pixels taller
	* audio/Audio.*: allow user-configurable music looping
	* gumps/AudioOptions_gump.*: UI for above
	* Makefile.am: alpha_kludges.h and mingw_kludges.h should be in 
	noinst_HEADERS, not in EXTRA_DIST
	* debian/.cvsignore: usual stuff
