@@ -1,3 +1,8 @@
+2001-12-21  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* effects.cc (Weather_effect): Turn off rain in gump mode.
+	* objs/egg.cc: Another goof in is_active().
+
 2001-12-20  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* objs/egg.cc (Egg_object): Fixed excessive monster spawning from
